Add membership card feature, mission statement of application and fixed the positioning of blocks.

--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <STRONG>
                 <li><a href="index.html" ><i class="fa-solid fa-house"></i>&nbsp;Home</a></li>
-            <li><a href="product.html" target="_blank"><i class="fa-brands fa-product-hunt"></i>&nbsp;Products</a></li>
-            <li><a href="" class="ac"><i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
-            <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
+                <li><a href="product.html" target="_blank"><i class="fa-brands fa-product-hunt"></i>&nbsp;Products</a></li>
+                <li><a href="" class="ac"><i class="fa-solid fa-address-card"></i>&nbsp;About</a></li>
+                <li><a href="contactform.html" target="_blank"><i class="fa-solid fa-phone"></i>&nbsp;Contact</a></li>
+                <li><a href="#popup-box" ><i class="fa-solid fa-envelope"></i>&nbsp;Membership Card</a></li>
         <!--     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             <li><input type="text" placeholder=" search products " class="inp">&nbsp;<i style="box-shadow: 7px 7px 7px grey;font-size: 20px; 
             position: relative;right: 28px;top: 4px;
@@ -32,20 +33,29 @@
             <div class="Fast">
                 <h1>Fast Delivery</h1>
                 <br>
-                <br>
                 <b>Lorem ipsum dolor sit amet consectetur adipisicing.</b>
             </div>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;
+
+            <div class="Mission">
+                <h1>Our Mission</h1>
+                <br>
+                <b>To provide best design clothes at a very reasonable price for you.</b>
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;
+
+
             <div class="free">
                 <h1>Free shipping</h1>
                 <br>
-                <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <div class="Best">
                 <h1>Best Quality</h1>
-                <br>
                 <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
             </div>
@@ -96,6 +106,19 @@
         </b>
     </div>
 
+    <div id="popup-box" class="modal">
+        <div class="content">
+            <h1 style="color: green;">
+                You have no Card!
+            </h1>
+            <b>
+                <p> Go and purchase first</p>
+            </b>
+            <a href="#"
+               class="box-close">
+                ×
+            </a>
+        </div>
 
 </body>
 </html>
